hotdeals-event-management/deployment/hotdeals-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotdeals-event-management-deployment
  labels:
    app: hotdeals-event-management
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hotdeals-event-management
  template:
    metadata:
      labels:
        app: hotdeals-event-management
    spec:
      containers:
      - name: hotdeals-event-management
        image: docker.io/ktdatagarage/hotdeals-event-management:latest
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "2048Mi"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: spring-8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 5
        volumeMounts:
        - name: tomcat-logs
          mountPath: /logs
      volumes:
      - name: host-sys
        hostPath:
          path: /sys
      - name: tomcat-logs
        persistentVolumeClaim:
          claimName: hotdeals-tomcat-logs-pvc
