hotdeals-event-management/deployment/hotdeals-event-management-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotdeals-event-management-service
  labels:
    app: hotdeals-event-management
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: spring-8080
  selector:
    app: hotdeals-event-management
