hotdeals-event-management/deployment/hotdeals-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotdeals-event-management-service
  labels:
    app: hotdeals-event-management
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: hotdeals-event-management
