hotdeals-event-management/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hotdeals-event-management-ingress
  namespace: hotdeals
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hotdeals-event.169.56.115.147.nip.io
    http:
      paths:
      - backend:
          serviceName: hotdeals-event-management-service
          servicePort: 8080
